new asm program - rectangle

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -2,6 +2,10 @@ hello_world:
 	ca65 --cpu 6502 hello_world.asm
 	ld65 -C linker.ld --obj hello_world.o -o rom.bin
 
+rectangle:
+	ca65 --cpu 6502 rectangle.asm
+	ld65 -C linker.ld --obj rectangle.o -o rom.bin
+
 clean:
 	rm -rf *.o
 	rm -rf *.bin
